--- a/scss/_jsa-styles.scss
+++ b/scss/_jsa-styles.scss
@@ -390,7 +390,7 @@ html {
     right: $right-width;
     width: $center-width;
     height: 100%;
-    display: inline-block;
+    z-index: 6;
 
     box-shadow: 0px 0 10px 2px rgba(0, 0, 0, 0.2);
 }
@@ -518,6 +518,7 @@ html {
     top: 0;
     bottom: 0;
     width: $left-width;
+    z-index: 2;
 
     .sectionTitle{
         background-color: $c-brand_dark;
